x03-shell_variables_expansions/102-odd

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -2424,21 +2424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x03-shell_variables_expansions/102-odd\n"
+      "Overwriting 0x03-shell_variables_expansions/102-odd\n"
      ]
     }
    ],
    "source": [
     "%%file 0x03-shell_variables_expansions/102-odd\n",
     "#!/bin/bash\n",
-    "ls -1 | paste -d, - - | cut -d, -f2 - -"
+    "ls -1 | paste -d, - - | cut -d, -f1 - -"
    ]
   },
   {
@@ -2469,23 +2469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x00-shell_basics.ipynb\n",
-      "0x01-shell_permissions.ipynb\n",
-      "0x02. Shell\n",
-      "0x03-shell_variables_expansions.ipynb\n",
-      "An_Acrostic\n",
-      "\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)\n",
-      "iacta\n",
-      "nasa_19950801.tsv\n",
-      "test.HTML\n",
-      "\n"
+      "0x00-shell_basics\n",
+      "0x01-shell_permissions\n",
+      "0x02-shell_redirections\n",
+      "0x03-shell_variables_expansions\n",
+      "An Acrostic\n",
+      "README.md\n",
+      "hello\n",
+      "ls_cwd_content\n",
+      "school.mgc\n",
+      "test.gif\n"
      ]
     }
    ],
@@ -2497,16 +2497,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3a4cf59] 16\n",
-      " 3 files changed, 38 insertions(+), 46 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/16-whatsnext\n"
+      "[main 29f8ed7] x03-shell_variables_expansions/102-odd\n",
+      " 2 files changed, 99 insertions(+), 1597 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/102-odd\n"
      ]
     },
     {
@@ -2514,7 +2514,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   fb17851..3a4cf59  main -> main\n"
+      "   874012a..29f8ed7  main -> main\n"
      ]
     }
    ],
