--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -2497,16 +2497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 29f8ed7] x03-shell_variables_expansions/102-odd\n",
-      " 2 files changed, 99 insertions(+), 1597 deletions(-)\n",
-      " create mode 100755 0x03-shell_variables_expansions/102-odd\n"
+      "[main d6812ef] x03-shell_variables_expansions/102-odd\n",
+      " 2 files changed, 20 insertions(+), 20 deletions(-)\n"
      ]
     },
     {
@@ -2514,7 +2513,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   874012a..29f8ed7  main -> main\n"
+      "   29f8ed7..d6812ef  main -> main\n"
      ]
     }
    ],
@@ -2534,7 +2533,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 17. I hate bins</h4>\n",
+    "<h4> 17. I'm an instant star. Just add water and stir.</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2544,56 +2543,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display all the lines in the file `/etc/passwd` that do not contain the pattern \"bin\".\n",
+    "##### Write a shell script that adds the two numbers stored in the environment variables WATER and STIR and prints the result.\n",
+    "\n",
+    "* `WATER` is in base `water`\n",
+    "* `STIR` is in base `stir`.\n",
+    "* The result should be in base `bestchol`\n",
+    "\n",
     "```bash\n",
-    "$ ./17-hidethisword\n",
-    "##\n",
-    "# User Database\n",
-    "#\n",
-    "# Note that this file is consulted directly only when the system is running\n",
-    "# in single-user mode. At other times this information is provided by\n",
-    "# Open Directory.\n",
-    "#\n",
-    "# See the opendirectoryd(8) man page for additional information about\n",
-    "# Open Directory.\n",
-    "##\n",
-    "$\n",
+    "julien@production-503e7013:~$ export WATER=\"ewwatratewa\"\n",
+    "julien@production-503e7013:~$ export STIR=\"ti.itirtrtr\"\n",
+    "julien@production-503e7013:~$ ./103-water_and_stir\n",
+    "shtbeolhc\n",
+    "julien@production-503e7013:~$\n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `17-hidethisword`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `103-water_and_stir`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/17-hidethisword\n"
+      "Writing 0x03-shell_variables_expansions/103-water_and_stir\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/17-hidethisword\n",
+    "%%file 0x03-shell_variables_expansions/103-water_and_stir\n",
     "#!/bin/bash\n",
-    "grep -v \"bin\" /etc/passwd "
+    "printf \"%o\\n\" $(( $((5#$(echo $WATER | tr water 01234))) + $((5#$(echo $STIR | tr stir. 01234))) )) | tr 01234567 bestchol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eobeocsoh\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/17-hidethisword"
+    "export WATER=\"ewwatratewa\"\n",
+    "STIR=\"ti.itirtrtr\"\n",
+    "chmod u+x 0x03-shell_variables_expansions/103-water_and_stir\n",
+    "./0x03-shell_variables_expansions/103-water_and_stir"
    ]
   },
   {
@@ -2602,7 +2610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./0x02-shell_redirections/17-hidethisword"
+    "!./0x03-shell_variables_expansions/103-water_and_stir"
    ]
   },
   {
